# Competitions

Abalone_2024_0411/: .gitignore  README.md  pyproject.toml  requirement.txt  requirements.txt
Abalone_2024_0411/src/conf/: config.py
Abalone_2024_0411/src/notebooks/: base_lgb.ipynb  eda_1.ipynb  optuna_lgb.ipynb
Abalone_2024_0411/src/outputs/: submission_base.csv  submission_new_opt.csv  submission_opt_mean.csv  submission_ropt.csv
Abalone_2024_0411/src/utils/: __init__.py  data_precesser.py  lgb_trial.py  load_datas.py  validations.py  visualize.py
MNIST_2024_0420/: .gitignore  requirements.txt
Soccer_2024_0614/: .gitignore  requirements.txt
Soccer_2024_0614/src/conf/: config.py
Soccer_2024_0614/src/notebooks/: eda.ipynb  feature_enginerring.ipynb  prediction_1.ipynb  prediction_2 opt.ipynb  prediction_2.ipynb  prediction_base.ipynb
Soccer_2024_0614/src/utils/: feature_enginerring.py  lgb_trial.py  load_datas.py  validations.py  visualize.py
