[project]
name = "abalone-2024-0411"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "h-hosoda-ml", email = "h.hosoda.ml@gmail.com" }
]
dependencies = [
    "tqdm>=4.66.2",
    "jupyter>=1.0.0",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "matplotlib>=3.7.5",
    "scipy>=1.10.1",
    "scikit-learn>=1.3.2",
    "kaggle>=1.6.11",
    "lightgbm>=4.3.0",
    "wheel>=0.43.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/"]
